Updated menu style with fix right alignement and smaller container size

--- a/src/scss/Menu.scss
+++ b/src/scss/Menu.scss
@@ -4,12 +4,12 @@
 
 .menu-container {
   margin-top: 0px;
+  position: relative;
   .drop-down {
     background: #67a066;
     border-radius: 8px;
     cursor: pointer;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
@@ -31,9 +31,10 @@
     background: #ffffff;
     border-radius: 8px;
     position: absolute;
-    top: 60px;
+    top: 40px;
+    left: auto;
     right: 0;
-    width: 300px;
+    width: 190px;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
     opacity: 0;
     visibility: hidden;
